test/files/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
217093efbc909edc21564a42c7069a9561921872 ?plugins.jar
